--- a/css/game3.css
+++ b/css/game3.css
@@ -3,9 +3,22 @@ body {
 }
 .top-image {
   width: 100%;
-  height: 20px;
+  background-image: url(../img/ab.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 680px;
+  margin-bottom: 20px;
 }
 .top-image img {
   width: 100%;
   height: 680px;
+}
+#first-row{
+  height: 200px;
+  background-color: blue;
+}
+#first-row img{
+  height: 180px;
+  margin: 20px 0;
+  border-radius: 12px;
 }
