--- a/css/game3.css
+++ b/css/game3.css
@@ -1,5 +1,6 @@
 body {
   background-color: pink;
+  width:100%;
 }
 .top-image {
   width: 100%;
@@ -9,16 +10,55 @@ body {
   height: 680px;
   margin-bottom: 20px;
 }
+ion-icon {
+  font-size: 25px;
+  color:white;
+  margin-right: 10px;
+  margin-right: 14px;
+  float:left;
+  display: inline;
+}
+.top-image a {
+  position:absolute;
+  top:500px;
+  left: 260px;
+
+}
+.top-image button{
+  background-color: #FF2142;
+  padding: 18px;
+  width:180px;
+  color:white;
+  border-radius: 20px;
+}
 .top-image img {
   width: 100%;
   height: 680px;
 }
 #first-row{
   height: 200px;
-  background-color: blue;
+  margin-bottom: 10px;
+
 }
 #first-row img{
   height: 180px;
   margin: 20px 0;
-  border-radius: 12px;
+}
+#second-row img {
+  height:70px;
+  width:185px;
+  line-height: 50%;
+}
+#second-row p {
+  margin-top: 54px;
+}
+#third-row {
+  margin-top:10px;
+}
+#third-row img {
+  height:70px;
+  width:185px;
+}
+iframe {
+  text-align:center;
 }
