--- a/css/game3.css
+++ b/css/game3.css
@@ -1,7 +1,17 @@
 body {
-  background-color: pink;
-  width:100%;
+  background-color: #FD2C69;
+  width: 100%;
+  font-family: 'Cardo', serif;
+  font-size: 22px;
+  margin: 0 auto;
+  /* background: #fc00ff;  /* fallback for old browsers */
+  /* background: -webkit-linear-gradient(to right, #00dbde, #fc00ff); */
+  /* Chrome 10-25, Safari 5.1-6 */
+  /* background: linear-gradient(to right, #00dbde, #fc00ff); */
+  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  */
 }
+
 .top-image {
   width: 100%;
   background-image: url(../img/ab.png);
@@ -10,55 +20,89 @@ body {
   height: 680px;
   margin-bottom: 20px;
 }
+
 ion-icon {
   font-size: 25px;
-  color:white;
-  margin-right: 10px;
-  margin-right: 14px;
-  float:left;
+  color: white;
+  /* margin-right: 3px; */
+  float: left;
   display: inline;
+  margin-top: 3px;
 }
-.top-image a {
-  position:absolute;
-  top:500px;
-  left: 260px;
 
+.top-image a {
+  position: absolute;
+  top: 500px;
+  left: 260px;
 }
-.top-image button{
+
+.top-image button {
   background-color: #FF2142;
   padding: 18px;
-  width:180px;
-  color:white;
+  width: 200px;
+  color: white;
   border-radius: 20px;
 }
+
 .top-image img {
   width: 100%;
   height: 680px;
 }
-#first-row{
+
+#first-row {
   height: 200px;
   margin-bottom: 10px;
+  padding-left: 20px;
+}
 
+.content {
+  padding-left: 20px;
 }
-#first-row img{
+
+#first-row img {
   height: 180px;
-  margin: 20px 0;
+  margin-left: -18px;
+  border-radius: 10px;
 }
+
 #second-row img {
-  height:70px;
-  width:185px;
+  height: 70px;
+  width: 185px;
   line-height: 50%;
 }
+
 #second-row p {
   margin-top: 54px;
 }
+
 #third-row {
-  margin-top:10px;
+  margin-top: 10px;
 }
+
 #third-row img {
-  height:70px;
-  width:185px;
+  height: 70px;
+  width: 185px;
 }
+
 iframe {
-  text-align:center;
+  margin-left: 200px;
+}
+
+#screenshot img {
+  width: 160px;
+  height: 160px;
+  float: left;
+  margin: 1.2%;
+}
+
+#video-background {
+  /*  making the video fullscreen  */
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  min-width: 100%;
+  min-height: 100%;
+  width: auto;
+  height: auto;
+  z-index: -100;
 }
