--- a/css/game2.css
+++ b/css/game2.css
@@ -1,7 +1,7 @@
 body {
   background-color: black;
   color: white;
-  font-family: Nunito;
+  font-family: 'Nunito', sans-serif;
 }
 
 .jumbotron {
@@ -41,13 +41,26 @@ body {
 }
 
 #small {
-  font-size: 12px;
+  font-size: 9px;
 }
 
+#bolder {
+  font-family: sans-serif;
+  font-weight: 400;
+  font-size: 11px;
+}
+
+#fret{
+  align-items: center;
+}
 #divider {
   align-items: flex-end;
   height: 4em;
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+#caps {
+  text-transform: uppercase;
 }
