--- a/css/styles.css
+++ b/css/styles.css
@@ -1,36 +1,23 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins:400,500,700');
-
-
-#heading1{
+#heading1 {
   text-align: center;
 }
 
-.issue{
+.issue {
   background-color: #e0e0e0;
 }
 
-.subscribeGame{
+.subscribeGame {
   background-color: #9fa8da;
 }
 
-
-
-
-
-
-
-
 /*---Media Queries --*/
-@media (max-width: 992px) {
 
-  }
-@media (max-width: 768px) {
+@media (max-width: 992px) {}
 
-}
-@media (max-width: 576px) {
+@media (max-width: 768px) {}
 
-}
-
+@media (max-width: 576px) {}
 
 .carousel-item {
   transition: -webkit-transform 0.5s ease;
@@ -39,13 +26,16 @@
   -webkit-backface-visibility: visible;
   backface-visibility: visible;
 }
+
 /*--- Fixed Background Image --*/
+
 figure {
   position: relative;
   width: 100%;
   height: 60%;
-  margin: 0!important;
+  margin: 0 !important;
 }
+
 .fixed-wrap {
   clip: rect(0, auto, auto, 0);
   position: absolute;
@@ -54,6 +44,7 @@ figure {
   width: 100%;
   height: 100%;
 }
+
 #fixed {
   background-image: url('img/mac.png');
   position: fixed;
@@ -65,17 +56,15 @@ figure {
   background-size: cover;
   background-position: center center;
   -webkit-transform: translateZ(0);
-          transform: translateZ(0);
+  transform: translateZ(0);
   will-change: transform;
 }
+
 /*--- Bootstrap Padding Fix --*/
+
 [class*="col-"] {
-    padding: 1rem;
+  padding: 1rem;
 }
-
-
-
-
 
 /*
 Extra small (xs) devices (portrait phones, less than 576px)
