--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,27 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins:400,500,700');
+
+html, body{
+  height:100%;
+  width: 100%;
+  font-family: 'Poppins', sans-serif;
+  color: #222;
+}
+
+.navbar{
+  padding: .8rem;
+}
+.navbar-nav li{
+  padding-right: 20px;
+}
+
+.nav-link{
+  font-size: 1.1em !important;
+}
+
+
+
+
+
 #heading1 {
   text-align: center;
 }
