formatted icons to fit displays

--- a/css/styles.css
+++ b/css/styles.css
@@ -71,7 +71,10 @@ hr.light{
   border-top: 1px solid #d5d5d5;
   width: 75%;
 }
-
+hr.light-100{
+  border-top: 1px solid #d5d5d5;
+  width: 100%;
+}
 
 #heading1 {
   text-align: center;
@@ -87,11 +90,26 @@ hr.light{
 
 /*---Media Queries --*/
 
-@media (max-width: 992px) {}
+@media (max-width: 992px) {
+  .social a {
+    font-size: 4em;
+    padding:2rem;
+  }
+}
 
-@media (max-width: 768px) {}
+@media (max-width: 768px) {
+  .social a {
+    font-size: 2.5em;
+    padding:1.2rem;
+  }
+}
 
-@media (max-width: 576px) {}
+@media (max-width: 576px) {
+  .social a {
+    font-size: 2em;
+    padding:0.7rem;
+  }
+}
 
 .carousel-item {
   transition: -webkit-transform 0.5s ease;
