edit footer background color

--- a/css/game3.css
+++ b/css/game3.css
@@ -176,6 +176,6 @@ ion-icon {
   z-index: -100;
 }
 #g3-footer {
-  background-color: #E4E4E4;
-  color:black;
+  background-color: black;
+  color:white;
 }
