--- a/css/styles.css
+++ b/css/styles.css
@@ -21,17 +21,19 @@ p {
 
 #mike {
   color: black;
-  text-align: center;
-  margin-left: 20px;
+  text-align: justify;
+  padding-left: 0px;
+  font-size: 20px;
 }
 
 h4 {
   text-align: center;
   color: #F4006A;
+  font-size: 30px;
 }
 
 #cup {
-  font-size: 20px;
+  font-size: 40px;
   text-align: center;
   color: #36485F;
 }
@@ -86,11 +88,11 @@ h4 {
   background-color: black;
 } */
 #at {
-  text-align: right;
+  text-align: center;
 }
 
 #nop p {
-  text-align: left;
+  text-align: center;
 }
 #dip{
   background-color: black;
@@ -98,4 +100,55 @@ text-decoration-color:
 }
 #pit{
   background-color: black;
+  font-size: 20px;
+}
+#PUK{
+  height: 50%;
+}
+h{
+  color:  #F4006A;
+}
+#kum{
+  font-size: 40px;
+}
+#myNavbar{
+  text-align:center;
+}
+#nit{
+  color: red;
+}
+.flex-container {
+  display: flex;
+  height: 200px;
+  align-items: centre;
+  margin-left: -40px;
+  margin-right: -40px;
+  padding-left: 50px;
+  background-color: black;
+  padding-bottom: 70px;
+  width: 109%;
+  height:0%;
+  margin-bottom: 50px;
+  color: white;
+}
+#mit{
+  color: white;
+}
+#vip{
+  color: green;
+}
+#dap{
+  color: brown;
+}
+#dep{
+  color: #3744AF;
+}
+#dip{
+  color: #E18500;
+}
+#pip{
+  color: #2C66B9;
+}
+#git{
+  color: white;
 }
