--- a/css/game2.css
+++ b/css/game2.css
@@ -1,11 +1,24 @@
 body {
   background-color: black;
-  color: grey;
+  color: white;
   font-family: 'Nunito';
  font-style: normal;
  font-weight: 400;
   }
 
+  p{
+    font-size: 21px;
+  }
+
+  nav {
+    background-image: url("../img/navbar.png");
+    background-size: cover;
+  }
+
+  #navtext {
+    color: white;
+    font-size: 20px;
+  }
 .jumbotron {
   background-color: black;
   background-image: url("../img/harrypotter.jpg");
