--- a/about.css
+++ b/about.css
@@ -2,7 +2,7 @@
 
 
 body {
-  font-family: 'Cardo', serif;
+  font-family: 'Poppins', serif;
 }
 
 /* h1 {
@@ -25,12 +25,13 @@ footer {
   background-color: #3f3f3f;
   color: #d5d5d5;
   padding-top: 1rem;
+  font-size: 16px;
 }
 
 nav {
   background-image: url("../img/navbar.png");
   background-size: cover;
-  font-size: 24px;
+  font-size: 22px;
   color: white;
 }
 .navbar {
